# rsvpnano

./: .gitignore  README.md  platformio.ini
.github/workflows/: pages.yml
desktop/: CMakeLists.txt  Makefile  main_desktop.cpp
desktop/books/: principito.rsvp
desktop/platform/: BoardConfig_desktop.cpp  ButtonHandler_desktop.cpp  DesktopInput.h  EpubConverter_desktop.cpp  TouchHandler_desktop.cpp  UsbMassStorageManager_desktop.cpp  Wire_desktop.cpp  axs15231b_desktop.cpp
desktop/shim/: Arduino.cpp  Arduino.h  FS.cpp  FS.h  Preferences.cpp  Preferences.h  SD_MMC.cpp  SD_MMC.h  USBMSC.h  Wire.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_sleep.h  sdkconfig.h  sdmmc_cmd.h  tusb.h
desktop/shim/driver/: gpio.h  sdmmc_types.h  spi_master.h
docs/: RELEASE_CHECKLIST.md
src/app/: App.cpp  App.h
src/display/: DisplayManager.cpp  DisplayManager.h
src/input/: TouchHandler.cpp  TouchHandler.h
src/storage/: StorageManager.cpp  StorageManager.h
src/usb/: UsbMassStorageManager.cpp  UsbMassStorageManager.h
web/firmware/: README.md
